--- a/bikeManagePublic/pom.xml
+++ b/bikeManagePublic/pom.xml
@@ -43,6 +43,11 @@
             <version>1.18.24</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper-spring-boot-starter</artifactId>
+            <version>1.4.6</version>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
